# log-time-machine

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.github/workflows/: ci.yml
docs/: demo.cast
scripts/: mock_log_stream.sh
src/: app.rs  baseline.rs  config.rs  filters.rs  ingest.rs  log_entry.rs  main.rs  timeline.rs  ui.rs
