[package]
name = "log-time-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
rand = { version = "0.8", features = ["small_rng"] }
ratatui = { version = "0.27", features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
