[package]
name = "ltm"
version = "0.1.1"
edition = "2021"
description = "Terminal log viewer with whole-line filters, bookmarks, timeline scrub, and live tail"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/LxYuan0420/log-time-machine"
keywords = ["tui", "logs", "terminal", "ratatui"]
categories = ["command-line-utilities"]
homepage = "https://github.com/LxYuan0420/log-time-machine"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
rand = { version = "0.8", features = ["small_rng"] }
ratatui = { version = "0.27", features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
